<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">2048</string>
    <string name="intro">Welcome to 2048!</string>
    <string name="intro_creator_name">By Tyler Carberry</string>
    <string name="action_settings">Settings</string>
    <string name="action_how_to_play">How To Play</string>
    <string name="action_stats">Game Stats</string>
    <string name="action_powerups">Powerups</string>
    <string name="action_achievements">Achievements</string>
    <string name="action_leaderboards">Leaderboards</string>
    <string name="how_to_play">Combine similar tiles to reach 2048.</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="restart">Restart</string>
    <string name="autoplay">Autoplay</string>
    <string name="auto_random">Random</string>
    <string name="auto_corner">Corner</string>
    <string name="auto_circle">Circle</string>
    <string name="auto_recursive">Recursive</string>
    <string name="mode_normal">Classic</string>
    <string name="mode_practice">Practice</string>
    <string name="mode_pro">Pro</string>
    <string name="mode_rush">Rush</string>
    <string name="mode_survival">Survival</string>
    <string name="mode_x">XMode</string>
    <string name="mode_corner">Corner</string>
    <string name="mode_arcade">Arcade</string>
    <string name="mode_speed">Speed</string>
    <string name="mode_zen">Zen</string>
    <string name="mode_ghost">Ghost</string>
    <string name="mode_crazy">Crazy</string>
    <string name="mode_custom">Custom</string>
    <string name="try_again">Try Again</string>
    
    <string name="mode_desc_normal">10 Undos</string>
    <string name="mode_desc_practice">Unlimited Undos</string>
    <string name="mode_desc_pro">No Undos</string>
    <string name="mode_desc_rush">Higher value tiles appear</string>
    <string name="mode_desc_survival">30 seconds time limit, combine tiles for more time **Coming Soon**</string>
    <string name="mode_desc_x">X tile cannot be combined</string>
    <string name="mode_desc_corner">Immovable tiles in the corner</string>
    <string name="mode_desc_speed">Limited moves and time **Coming Soon**</string>
    <string name="mode_desc_zen">All tiles combine. Impossible to lose. **Coming Soon**</string>
    <string name="mode_desc_crazy">A 5x5 grid with every other mode enabled</string>
    <string name="mode_desc_ghost">All tiles appear as ?</string>
    <string name="mode_desc_arcade">Every move has a chance of granting a bonus but can also cause an attack **Coming Soon**</string>
    <string name="mode_desc_custom">Change everything about the game **Coming Soon**</string>
    
    <string name="title_activity_game">GameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="remove_low">Remove Low Tiles</string>
    <string name="prompt_start_game">Start A New Game</string>
    <string name="turn">Turn</string>
    <string name="score">Score</string>
    <string name="undo">Undo</string>
    <string name="shuffle">Shuffle</string>
    <string name="undo_remaining">Undos Left</string>
    <string name="move_remaining">Moves Left</string>
    <string name="time_remaining">Time Left</string>
    <string name="powerups_remaining">Powerups Left</string>
    <string name="you_lose">YOU LOSE</string>
    <string name="slow">Slow</string>
    <string name="medium">Medium</string>
    <string name="fast">Fast</string>
    <string name="no_animation">No Animation</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="file_current_game">CURRENT_GAME</string>
    <string name="file_game_stats">GAME_STATS</string>
    <string name="title_activity_stats">StatsActivity</string>
	<string name="game_stats">Game Stats</string>
    <string name="total_games">Total Games Lost</string>
    <string name="total_undos">Total Undos</string>
    <string name="total_shuffles">Total Shuffles</string>
    <string name="total_moves">Total Moves</string>
    <string name="high_score">High Score</string>
    <string name="lowest_score">Lowest Score</string>
    <string name="highest_tile">Highest Tile</string>
    
</resources>
