<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.app_2048.GameActivity" >
    
    <item
        android:id="@+id/action_powerups"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_powerups"/>
    
    <item
        android:id="@+id/action_achievements"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/action_achievements"/>
    
    <item
        android:id="@+id/action_leaderboards"
        android:orderInCategory="130"
        android:showAsAction="never"
        android:title="@string/action_leaderboards"/>
    
    <item
        android:id="@+id/action_how_to_play"
        android:orderInCategory="180"
        android:showAsAction="never"
        android:title="@string/action_how_to_play"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
</menu>
