<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AntiqueWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.app_2048.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/intro_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/intro"
        android:textSize="35sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prompt_select_game"
        android:layout_below="@+id/name_textview"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/intro_textview"
        android:layout_below="@+id/intro_textview"
        android:gravity="center"
        android:text="@string/intro_creator_name"
        android:textSize="20sp" />

    <Button
        android:id="@+id/continue_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:onClick="startGameActivity"
        android:text="Continue Saved Game" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prompt_select_game" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:columnCount="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/normal_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="createGame"
                    android:text="@string/mode_normal" />

                <Button
                    android:id="@+id/practice_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="createGame"
                    android:text="@string/mode_practice" />

                <Button
                    android:id="@+id/pro_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="createGame"
                    android:text="@string/mode_pro" />

                <Button
                    android:id="@+id/x_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="createGame"
                    android:text="@string/mode_x" />

                <Button
                    android:id="@+id/corner_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="createGame"
                    android:text="@string/mode_corner" />

                <Button
                    android:id="@+id/rush_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="createGame"
                    android:text="@string/mode_rush" />

                <Button
                    android:id="@+id/survival_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="createGame"
                    android:text="@string/mode_survival" />

                <Button
                    android:id="@+id/zen_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="createGame"
                    android:text="@string/mode_zen" />

                <Button
                    android:id="@+id/crazy_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="createGame"
                    android:text="@string/mode_crazy" />
                
                <Button
                    android:id="@+id/custom_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="createGame"
                    android:text="@string/mode_custom" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/prompt_select_game"
        android:layout_toRightOf="@+id/relativeLayout1" >

        <TextView
            android:id="@+id/game_mode_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Classic Mode"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/game_desc_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/game_mode_textview"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="Insert very long mode descripion here including multiple bullet points"
            android:textSize="20sp" />

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="Start Game" />
        
    </RelativeLayout>

    <TextView
        android:id="@+id/prompt_select_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/continue_game_button"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="Start A New Game"
        android:textSize="20sp" />

</RelativeLayout>